[project]
name = "my-python-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinya Fujino", email = "shf0811@gmail.com" }
]
dependencies = [
    "langchain>=0.0.27",
    "openai>=0.27.8",
    "pypdf>=3.15.1",
    "qdrant-client>=1.4.0",
    "tiktoken>=0.4.0",
    "flask>=2.3.2",
    "ruff>=0.0.284",
    "black>=23.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
